--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "react-create-global-state",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Generate a useState, but for global variables.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/babel lib.js --out-file index.js"
-  },
+  "author": "Ben-hur Santos Ott",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/benhurott/react-create-global-state.git"
   },
+  "bugs": {
+    "url": "https://github.com/benhurott/react-create-global-state/issues"
+  },
+  "homepage": "https://github.com/benhurott/react-create-global-state#readme",
   "keywords": [
     "useState",
     "react",
@@ -18,21 +19,64 @@
     "global",
     "hooks"
   ],
-  "author": "Ben-hur Santos Ott",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/benhurott/react-create-global-state/issues"
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.modern.js",
+  "source": "src/index.tsx",
+  "engines": {
+    "node": ">=10"
   },
-  "homepage": "https://github.com/benhurott/react-create-global-state#readme",
+  "scripts": {
+    "build": "microbundle-crl --no-compress --format modern,cjs",
+    "start": "microbundle-crl watch --no-compress --format modern,cjs",
+    "prepare": "run-s build",
+    "test": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:watch": "react-scripts test --env=jsdom",
+    "test:coverage": "react-scripts test --env=jsdom --coverage --no-watch",
+    "predeploy": "cd example && npm install && npm run build",
+    "deploy": "gh-pages -d example/build"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/preset-react": "^7.0.0",
-    "husky": "^1.3.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/jest": "^25.1.4",
+    "@types/node": "^12.12.38",
+    "@types/react": "^16.9.27",
+    "@types/react-dom": "^16.9.7",
+    "@types/testing-library__jest-dom": "^5.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "babel-eslint": "^10.0.3",
+    "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "gh-pages": "^2.2.0",
+    "microbundle-crl": "^0.13.10",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.4",
+    "react": "^16.13.1",
+    "react-app-polyfill": "^2.0.0",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "typescript": "^3.7.5"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run build && git add ."
-    }
-  }
+  "files": [
+    "dist"
+  ],
+  "directories": {
+    "example": "example"
+  },
+  "dependencies": {}
 }
